Fixed issue #13, a gap in the underline of the hovered follow(er/ing) numbers

--- a/static/css/twitter/profile.css
+++ b/static/css/twitter/profile.css
@@ -159,7 +159,6 @@ Table of contents:
 
                 .profile-bio-info-relations-number {
                     color: black;
-                    margin-right: .2em;
                 }
 
                 .profile-bio-info-relations-following {
